--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,15 @@
-*{
+* {
     margin: 0;
+}
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
 }
 
 h1.full_name {
@@ -27,7 +37,7 @@ a.nav-item {
     padding: 2%;
     color: white;
     font-weight: bolder;
-    size: 100%;
+    font-size: 125%;
 }
 
 a.nav-item:hover {
@@ -59,6 +69,12 @@ div.content {
     padding-bottom: 5%;
 }
 
+div.content-text::first-letter {
+    font-size: 3rem;
+    font-weight: bold;
+    color: black;
+}
+
 div.content-text {
     border-left: 10px solid #e6e6e6;
     padding-left: 2%;
@@ -80,8 +96,8 @@ header a {
 img.profile {
     text-align: center;
     border-radius: 50%;
-    width: 30%;
-    height: 30%;
+    width: 15%;
+    height: 15%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 3%;
@@ -93,6 +109,8 @@ img.profile {
 p {
     text-indent: 5%;
     font-family: abadi;
+    margin-top: 0.75%;
+    margin-bottom: 0.75%;
 }
 
 ul {
