Remove 'interesses' and add 'artigos'

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,8 @@
                 <a class="nav-item" href="/interesses">
                     Interesses
                 </a>
-                <a class="nav-item" href="/recursos">
-                    Recursos
+                <a class="nav-item" href="/artigos">
+                    Artigos
                 </a>
 
         </ul>
